--- a/PHPModules/Footer.html
+++ b/PHPModules/Footer.html
@@ -1,4 +1,4 @@
 <a href="https://ezrecipe.xyz">ezrecipe.xyz</a> -
 <a href="https://github.com/rethyxyz/">GitHub</a> -
 <a href="https://rethy.xyz">rethy.xyz</a>
-<p class=small>Brody Rethy (C) 2022</p>
+<p class=small>Brody Rethy © 2022</p>
